Fixed errors in ping and updated reconnect methods